syntax = "proto3";

package pb;

service Goods {
    rpc GetGoodsList (GoodsRequest) returns (GoodsReply) {

    }
    rpc GetGoodsDetail (GoodsRequest) returns (GoodsReplyItem) {

    }
    rpc GetGoodsHotList (GoodsRequest) returns (GoodsReply) {

    }
}

message GoodsRequest {
    string GoodsUuid = 1;
    string GoodsFrom = 2;
    int64 GoodsTypeId = 3;
    string PrimaryType = 4;
    string SecondaryType = 5;
    string Img = 6;
    string Imgs = 7;
    bool IsValid = 8;
    string Title = 9;
    string Subtitle = 10;
    int64 Price = 11;
    string PublishDate = 12;
    int64 pageIndex = 13;
    int64 pageSize = 14;
}

message GoodsReplyItem {
    string GoodsUuid = 1;
    string GoodsFrom = 2;
    int64 GoodsTypeId = 3;
    string PrimaryType = 4;
    string SecondaryType = 5;
    string Img = 6;
    string Imgs = 7;
    bool IsValid = 8;
    string Title = 9;
    string Subtitle = 10;
    int64 Price = 11;
    string PublishDate = 12;
}

message GoodsReply {
    repeated GoodsReplyItem data = 1;
}